Test_Files/abstract_vm/Error/missing.asm
;     Missing
;   =============
;   Error test 11

push int32(32)
add
dump
pop
push float(15.8)
div
dump
pop
push double(-78.45)
mod
dump
pop
push int8(16)
mul
dump
pop
push int16(-443)
sub
dump
pop
exit
